add_executable(Arr_list Arr_list.cc)
add_test(NAME Arr_list COMMAND Arr_list)

add_executable(List List.cc)
add_test(NAME List COMMAND List)

add_executable(Binary_search Binary_search.cc)
add_test(NAME Binary_search COMMAND Binary_search)

add_executable(Arr_stack Arr_stack.cc)
add_test(NAME Arr_stack COMMAND Arr_stack)

add_executable(Stack Stack.cc)
add_test(NAME Stack COMMAND Stack)

add_executable(Arr_queue Arr_queue.cc)
add_test(NAME Arr_queue COMMAND Arr_queue)

add_executable(Queue Queue.cc)
add_test(NAME Queue COMMAND Queue)

add_executable(Arithmetic Arithmetic.cc)
add_test(NAME Arithmetic COMMAND Arithmetic)

add_executable(Polynomial Polynomial.cc)
add_test(NAME Polynomial COMMAND Polynomial)