add_executable(Sequential_search Sequential_search.cc)
add_test(NAME Sequential_search COMMAND Sequential_search)

add_executable(Arr_tree Arr_tree.cc)
add_test(NAME Arr_tree COMMAND Arr_tree)

add_executable(Tree Tree.cc)
add_test(NAME Tree COMMAND Tree)

add_executable(Isomorphic Isomorphic.cc)
add_test(NAME Isomorphic COMMAND Isomorphic)

add_executable(BinarySearchTree BinarySearchTree.cc)
add_test(NAME BinarySearchTree COMMAND BinarySearchTree)

add_executable(Avl Avl.cc)
add_test(NAME Avl COMMAND Avl)

add_executable(RBTree RBTree.cc)
add_test(NAME RBTree COMMAND RBTree)

add_executable(MaxHeap MaxHeap.cc)
add_test(NAME MaxHeap COMMAND MaxHeap)